--- a/SiteUnifev/Content/site.css
+++ b/SiteUnifev/Content/site.css
@@ -21,6 +21,7 @@
 }
 
 .lupa {
+    background-image: linear-gradient(#32D915, #28A911);
     align-self: center;
     width: 50px;
     height: 50px;
@@ -32,7 +33,6 @@
 .navbar-links {
     display: flex;
     background: blue;
-    justify-content: space-between;
     padding-top: 10px;
 }
 
