--- a/SiteUnifev/Content/site.css
+++ b/SiteUnifev/Content/site.css
@@ -10,9 +10,9 @@
 .logo {
     font-size: 3.125rem;
     font-weight: bold;
-    margin-left: 100px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-left: 6.25rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
 }
 
 .titulo-div{
@@ -25,15 +25,15 @@
     align-self: center;
     width: 50px;
     height: 50px;
-    padding-left: 18px;
-    padding-top: 13px;
-    border-radius: 12px;
+    padding-left: 1.125rem;
+    padding-top: 0.8rem;
+    border-radius: 0.75rem;
 }
 
 .navbar-links {
     display: flex;
     background: blue;
-    padding-top: 10px;
+    padding-top: 0.6rem;
 }
 
 .navbar-links-label {
@@ -45,9 +45,9 @@
 .navbar-links-label p{
     color: white;
     font-size: 1rem;
-    margin-left: 20px;
+    margin-left: 1.25rem;
     font-weight: bold;
-    margin-top: 5px;
+    margin-top: 0.3rem;
 }
 
 
@@ -55,12 +55,8 @@
     font-size: 2.5rem;
     color: blue;
     font-weight: bold;
-    margin-top: 20px;
-    margin-left: 100px;
-}
-
-.lupa {
-    background-color: green;
+    margin-top: 1.25rem;
+    margin-left: 6.25rem;
 }
 
 .descricao {
@@ -74,9 +70,9 @@
 
 .botoes-chaves {
     display: flex;
-    padding-left: 20px;
+    padding-left: 1.25rem;
     justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 3.75rem;
 }
 
 .botao-manual-navegacao {
@@ -87,7 +83,7 @@
     text-align: center;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
-    padding-top: 40px;
+    padding-top: 2.5rem;
 }
 
 .botao-perguntas-frequentes {
@@ -96,10 +92,10 @@
     height: 100px;
     width: 220px;
     text-align: center;
-    margin-left: 20px;
+    margin-left: 1.25rem;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
-    padding-top: 40px;
+    padding-top: 2.5rem;
 }
 
 .text-descricao {
@@ -109,15 +105,13 @@
 #botoes {
     display: flex;
     font-size: 2rem;
-    margin-left: 100px;
-    margin-right: 200px;
-    margin-top: 30px;
+    margin: 1.875rem 12.5rem 0rem 6.25rem;
 }
 
 #botoes-links {
-    margin-right: 20px;
+    margin-right: 1.25rem;
     border-style: groove;
-    padding: 30px 30px 30px 30px;
+    padding: 1.875rem 1.875rem 1.875rem 1.875rem;
     text-decoration: none;
     color: black;
 }
