--- a/SiteUnifev/Views/Shared/_Layout.cshtml
+++ b/SiteUnifev/Views/Shared/_Layout.cshtml
@@ -9,12 +9,31 @@
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
 </head>
 <body>
+    <div class="nav">
+        <div class="logo">
+            UNIFEV
+        </div>
+        <div>
+
+        </div>
+    </div>
+
+    <div class="navbar-links">
+        <div class="navbar-links-label">
+            <p>Portal X</p>
+            <p>Fale conosco</p>
+            <p>Site da empresa</p>
+        </div>
+        <div>
+
+        </div>
+    </div>
 
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Site UNIFEV</p>
         </footer>
     </div>
 
