--- a/SiteUnifev/Views/Home/Index.cshtml
+++ b/SiteUnifev/Views/Home/Index.cshtml
@@ -5,26 +5,6 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 <link href="~/Content/bootstrap.css" rel="stylesheet" />
 
-<div class="nav">
-    <div class="logo">
-        UNIFEV
-    </div>
-    <div>
-
-    </div>
-</div>
-
-<div class="navbar-links">
-    <div class="navbar-links-label">
-        <p>Portal X</p>
-        <p>Fale conosco</p>
-        <p>Site da empresa</p>
-    </div>
-    <div>
-
-    </div>
-</div>
-
 <div class="titulo-div">
     <div class="titulo">
         PORTAL DA EMPRESA
@@ -55,13 +35,14 @@
     var botoes = ViewBag.Botoes;
 }
 
-<div id="botoes">
+<div class="row" id="botoes">
     @foreach (var b in botoes)
     {
-        <a href="Index" class="cold-md-2" id="botoes-links">
-            
-            <i class="@b.Icone"></i>
-            @b.Nome
+        <a href="Index" class="col-md-2" id="botoes-links">
+            <div class="botoes-text">
+                <i class="@b.Icone"></i>
+                @b.Nome
+            </div>
         </a>
     }
 </div>
